
  * Sort is implemented, thanks to Utkarsh Gautam.

  * Fourier and Laplace transforms (and their inverses) use a
    different implementation which improves handling of delta
    functions.  Ideally, a later version will consolidate this with
    SymPy's original implementations.

  * Python `None` can be returned and manipulated.

  * Documentation improvements.



octsympy 2.2.4 (2015-12-14)
===========================

  * Fix display on Octave 3.8.

  * Support for SymPy 0.7.6.1.



octsympy 2.2.3 (2015-11-25)
===========================

  * New commands:

          cross
          dot

  * sym('var') is more robust in case var happens to be a special
    value in SymPy.  Now sym('E') is just a symbol rather than
    exp(sym(1)).  Also sym('E1') and sym('Eq') no longer give errors.

  * Fix bug in assigning to column vectors, thanks to Grzegorz Dudziuk.

  * During install, test for PATH problems on Windows (issue #236).

  * Fix for Octave 4.1+ development versions, thanks to Mike Miller.



octsympy 2.2.2 (2015-07-03)
===========================

  * Fix for configure script using Python 3 (thanks Vadim Gribanov).

  * Fourier transform fixes (thanks Alexander Misel, Andrés Prieto).
    They now follow the non-unitary angular frequency convention.

  * Support for SymPy 0.7.7.dev version.

  * Add some warnings to the documentation about unreliable results
    for "dsolve" on systems and from Fourier transforms.

  * Start using "print_usage" for invalid inputs as is common
    practice in Octave.

  * Bug fixes and update doctests.



octsympy 2.2.1 (2015-04-22)
===========================

  * Fix an ascii pretty printing regression (issue #234).

  * Other minor fixes for doctests, sympref and symreplace.



octsympy 2.2.0 (2015-04-20)
===========================

  * New commands:

          catalan
          eulergamma
          lambertw

  * Installing symbolic package now check for Python and minimum